--- a/src/main/resources/archetype-resources/src/main/webapp/api-doc/template-rest-doc.xhtml
+++ b/src/main/resources/archetype-resources/src/main/webapp/api-doc/template-rest-doc.xhtml
@@ -25,7 +25,7 @@
 
 		<!-- SB Admin CSS - Include with every page -->
 		<link href="../css/sb-admin.css" rel="stylesheet" />
-		<link href="../css/${artifactId}.css" rel="stylesheet" />
+		<link href="../css/esqueleto.css" rel="stylesheet" />
 	</h:head>
 
 	<h:body>
